--- a/Index.html
+++ b/Index.html
@@ -7,33 +7,35 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
+  
     <div class="cont">
-       <nav class="navBar">
-        <div data-testid="currentDayOfTheWeek" class="dayOfTheWeek">
-            <div id="thursday" >Thursday</div>
-            <img id="dropDownArrow" width="24" height="24" 
-            src="https://img.icons8.com/material-outlined/24/expand-arrow--v1.png" alt="expand-arrow--v1"/>
-        </div>
-
-        <div  class="time">
-            <h4 data-testid="currentUTCTime">Thursday, September 08 2023 12:12:06 PM</h4>
-        </div>
-       </nav>
-
-        <div class="nameTrackImage">
-            <div class="nameTrack">
-                <h1 data-testid="slackUserName">KACHI W.</h1><br>
-                <h3 data-testid="myTrack">FrontEnd Developer</h3>
-                
-            </div>
-            <div class="slackImage">
-                <img data-testid="slackDisplayImage" src="./myPhotoStage_One/stageOne_Img.jpeg" alt="">
-            </div>
-        </div>
-        <div class="githubLink">
-            <a data-testid="githubURL"  href="">GitHub URL</a>
-        </div>
-    </div>
+        <nav class="navBar">
+         <div data-testid="currentDayOfTheWeek" class="dayOfTheWeek">
+             <div id="thursday" >Thursday</div>
+             <img id="dropDownArrow" width="24" height="24" 
+             src="https://img.icons8.com/material-outlined/24/expand-arrow--v1.png" alt="expand-arrow--v1"/>
+         </div>
+ 
+         <div  class="time">
+             <h4 id="timeSpace" data-testid="currentUTCTime"></h4>
+         </div>
+        </nav>
+ 
+         <div class="nameTrackImage">
+             <div class="nameTrack">
+                 <h1 data-testid="slackUserName">KACHI W.</h1>
+                 <h3 data-testid="myTrack">FrontEnd Developer</h3>
+                 
+             </div>
+             <div class="slackImage">
+                 <img data-testid="slackDisplayImage" src="./myPhotoStage_One/stageOne_Img.jpeg" alt="Kachi W.">
+             </div>
+         </div>
+         <div class="githubLink">
+             <a data-testid="githubURL"  href="https://github.com/Wkachi/StageOne_Task.git">GitHub URL</a>
+         </div>
+     </div>
+  
 
     <div id="eDwD" class="weekDays">
         <div id="eDwD" class="eachDay" >
